--- a/static/css/reset.css
+++ b/static/css/reset.css
@@ -1,58 +1,58 @@
 @font-face {
     font-family: 'Raleway';
-    src: url('/static/fonts/raleway_300.woff') format('woff');
+    src: url('../fonts/raleway_300.woff') format('woff');
     font-weight: 300;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Raleway';
-    src: url('/static/fonts/raleway_500.woff') format('woff');
+    src: url('../fonts/raleway_500.woff') format('woff');
     font-weight: 500;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Raleway';
-    src: url('/static/fonts/raleway_700.woff') format('woff');
+    src: url('../fonts/raleway_700.woff') format('woff');
     font-weight: bold;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Material-Design-Iconic-Font';
-    src: url('/static/fonts/Material-Design-Iconic-Font.woff2?v=2.2.0') format('woff2'),
-    url('/static/fonts/Material-Design-Iconic-Font.woff?v=2.2.0') format('woff'),
-    url('/static/fonts/Material-Design-Iconic-Font.ttf?v=2.2.0') format('truetype');
+    src: url('../fonts/Material-Design-Iconic-Font.woff2?v=2.2.0') format('woff2'),
+    url('../fonts/Material-Design-Iconic-Font.woff?v=2.2.0') format('woff'),
+    url('../fonts/Material-Design-Iconic-Font.ttf?v=2.2.0') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Material-Design-Iconic-Font';
-    src: url('/static/fonts/Material-Design-Iconic-Font.woff2?v=2.2.0') format('woff2'),
-    url('/static/fonts/Material-Design-Iconic-Font.woff?v=2.2.0') format('woff'),
-    url('/static/fonts/Material-Design-Iconic-Font.ttf?v=2.2.0') format('truetype');
+    src: url('../fonts/Material-Design-Iconic-Font.woff2?v=2.2.0') format('woff2'),
+    url('../fonts/Material-Design-Iconic-Font.woff?v=2.2.0') format('woff'),
+    url('../fonts/Material-Design-Iconic-Font.ttf?v=2.2.0') format('truetype');
     font-weight: bold;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'icons';
-    src: url('/static/fonts/icons.ttf?v=7') format('truetype'),
-    url('/static/fonts/icons.woff?v=7') format('woff'),
-    url('/static/fonts/icons.svg?v=7') format('svg');
+    src: url('../fonts/icons.ttf?v=7') format('truetype'),
+    url('../fonts/icons.woff?v=7') format('woff'),
+    url('../fonts/icons.svg?v=7') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'icons_2';
-    src: url('/static/fonts/icons_2.eot?v=2');
-    src: url('/static/fonts/icons_2.eot?v=2#iefix') format('embedded-opentype'),
-    url('/static/fonts/icons_2.ttf?v=2') format('truetype'),
-    url('/static/fonts/icons_2.woff?v=2') format('woff'),
-    url('/static/fonts/icons_2.svg?v=2') format('svg');
+    src: url('../fonts/icons_2.eot?v=2');
+    src: url('../fonts/icons_2.eot?v=2#iefix') format('embedded-opentype'),
+    url('../fonts/icons_2.ttf?v=2') format('truetype'),
+    url('../fonts/icons_2.woff?v=2') format('woff'),
+    url('../fonts/icons_2.svg?v=2') format('svg');
     font-weight: normal;
     font-style: normal;
 }
