--- a/static/css/style.css
+++ b/static/css/style.css
@@ -76,7 +76,7 @@ select{
     width: 38px;
     height: 38px;
     margin: 40px auto 50px auto;
-    background: url(/static/images/logo-white.png) 0 50%;
+    background: url(../images/logo-white.png) 0 50%;
     background-size: 38px 38px;
 }
 
